attack/counter/health functions

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <h2> Choose your character </h2>
           <div class= "image">
             <img id= "anakin" src= "assets/images/anakin.PNG" alt="anakin" style= "height: 180px; width: 180px;"> 
-            <span id= "healtha"> health: </span>
+            <span id= "healtha"> health: </span> <progress id="health" value="200" max="200"></progress>
           </div>  
           <div class= "image">
             <img id= "obi" src= "assets/images/obi.JPG" alt="obi" style= "height: 180px; width: 180px;"> 
-            <span id = "healtho"> health: </span>
+            <span id = "healtho"> health: </span> <progress id="health" value="250" max="250"></progress>
           </div>
           <div class= "image">
             <img id= "general" src= "assets/images/general.JPG" alt="general" style= "height: 180px; width: 180px;"> 
-            <span id = "healthg"> health: </span>
+            <span id = "healthg"> health: </span> <progress id="health" value="300" max="300"></progress>
           </div>
 
       </div>
