--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <body>
   <div class= "container"> 
-    <h1 class= "jumbotron"> Star Wars RPG</h1>
+    <div class= "jumbotron">
+    <h1> Star Wars RPG</h1>
+      <div class= "wins"> </div>
+      </div>
       <div class= "characters row col-lg-9 col-md-9 col-sm-10 col-xs-11">
         <h2> Choose your character </h2>
           <div class= "image">
@@ -38,6 +41,7 @@
         <h3> Your Hero </h3>
           <!-- <span class= "health"> Health : </span> -->
           <button class= "attack btn btn-lg btn-danger"> Attack </button>
+
       </div>
 
       <div class= "defenders row col-lg-8 col-md-9 col-sm-10 col-xs-11">
