--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span id = "healtho"> health: </span> <progress id="health" value="250" max="250"></progress>
           </div>
           <div class= "image">
-            <img id= "general" src= "assets/images/general.JPG" alt="general" style= "height: 180px; width: 180px;"> 
+            <img id= "general" src= "assets/images/general2.JPG" alt="general" style= "height: 180px; width: 180px;"> 
             <span id = "healthg"> health: </span> <progress id="health" value="300" max="300"></progress>
           </div>
 
@@ -41,7 +41,7 @@
         <h3> Your Hero </h3>
           <!-- <span class= "health"> Health : </span> -->
           <button class= "attack btn btn-lg btn-danger"> Attack </button>
-
+          <button class= "reset btn btn-sm"><span class= "glyphicon glyphicon-refresh"> Reset </span></button>
       </div>
 
       <div class= "defenders row col-lg-8 col-md-9 col-sm-10 col-xs-11">
@@ -50,6 +50,11 @@
       </div>
 
 
+  <audio id="myAudio">
+    <source src="assets/images/music.MP3" type="audio/mp3">
+  
+  
+  </audio>
 
   </div>
   <script type= "text/javascript" src="assets/game.js"> </script>
