--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       </div>
       <div class= "characters row col-lg-9 col-md-9 col-sm-10 col-xs-11">
         <h2> Choose your character </h2>
-          <div class= "image">
+          <div class= "image image1">
             <img id= "anakin" src= "assets/images/anakin.PNG" alt="anakin" style= "height: 180px; width: 180px;"> 
             <span id= "healtha"> health: </span> <progress id="health" value="200" max="200"></progress>
           </div>  
-          <div class= "image">
+          <div class= "image image2">
             <img id= "obi" src= "assets/images/obi.JPG" alt="obi" style= "height: 180px; width: 180px;"> 
             <span id = "healtho"> health: </span> <progress id="health" value="250" max="250"></progress>
           </div>
-          <div class= "image">
+          <div class= "image image3">
             <img id= "general" src= "assets/images/general2.JPG" alt="general" style= "height: 180px; width: 180px;"> 
             <span id = "healthg"> health: </span> <progress id="health" value="300" max="300"></progress>
           </div>
