reset button animations

--- a/index.html
+++ b/index.html
@@ -22,16 +22,12 @@
       
       <div class= "characters row col-lg-9 col-md-9 col-sm-10 col-xs-11">
         <h2> Choose your character </h2>
-          <div class="progress">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-    <span class="sr-only">45% Complete</span>
-  </div>
-</div>
+          
           <div class= "image image1">
             <img id= "anakin" src= "assets/images/anakin.PNG" alt="anakin" style= "height: 180px; width: 180px;"> 
             <span id= "healtha"> health: </span> <progress class= "progress-bar-striped" id="health1" value="200" max="200" style= "width: 200;"></progress>
           </div>  
-          <div class= "image image2">s
+          <div class= "image image2">
             <img id= "obi" src= "assets/images/obi.JPG" alt="obi" style= "height: 180px; width: 180px;"> 
             <span id = "healtho"> health: </span> <progress class= "progress-bar-striped" id="health2" value="250" max="250" style= "width: 450;"></progress>
           </div>
