changed file path names for git

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <h2> Choose your character </h2>
           
           <div class= "image image1">
-            <img id= "anakin" src= "assets/images/anakin.PNG" alt="anakin" style= "height: 180px; width: 180px;"> 
+            <img id= "anakin" src= "assets/images/anakin.png" alt="anakin" style= "height: 180px; width: 180px;"> 
             <span id= "healtha"> health: </span> <progress class= "progress-bar-striped" id="health1" value="200" max="200" style= "width: 200;"></progress>
           </div>  
           <div class= "image image2">
-            <img id= "obi" src= "assets/images/obi.JPG" alt="obi" style= "height: 180px; width: 180px;"> 
+            <img id= "obi" src= "assets/images/obi.jpg" alt="obi" style= "height: 180px; width: 180px;"> 
             <span id = "healtho"> health: </span> <progress class= "progress-bar-striped" id="health2" value="250" max="250" style= "width: 450;"></progress>
           </div>
           <div class= "image image3">
-            <img id= "general" src= "assets/images/general2.JPG" alt="general" style= "height: 180px; width: 180px;"> 
+            <img id= "general" src= "assets/images/general2.jpg" alt="general" style= "height: 180px; width: 180px;"> 
             <span id = "healthg"> health: </span> <progress class= "progress-bar-striped" id="health3" value="300" max="300" style= "width: 300;"></progress>
           </div>
 
