--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
           
           <div class= "image image1">
             <img id= "anakin" src= "assets/images/anakin.png" alt="anakin" style= "height: 180px; width: 180px;"> 
-            <span id= "healtha"> health: </span> <progress class= "progress-bar-striped" id="health1" value="200" max="200" style= "width: 200;"></progress>
+            <span id= "healtha"> health: </span> <progress class= "progress-bar-danger progress" id="health1" value="200" max="200" style= "width: 200;"></progress>
           </div>  
           <div class= "image image2">
             <img id= "obi" src= "assets/images/obi.jpg" alt="obi" style= "height: 180px; width: 180px;"> 
-            <span id = "healtho"> health: </span> <progress class= "progress-bar-striped" id="health2" value="250" max="250" style= "width: 450;"></progress>
+            <span id = "healtho"> health: </span> <progress class= "progress-bar-danger progress" id="health2" value="250" max="250" style= "width: 450;"></progress>
           </div>
           <div class= "image image3">
             <img id= "general" src= "assets/images/general2.jpg" alt="general" style= "height: 180px; width: 180px;"> 
-            <span id = "healthg"> health: </span> <progress class= "progress-bar-striped" id="health3" value="300" max="300" style= "width: 300;"></progress>
+            <span id = "healthg"> health: </span> <progress class= "progress-bar-danger progress" id="health3" value="300" max="300" style= "width: 300;"></progress>
           </div>
 
       </div>
 
       <div class= "selected row col-lg-8 col-md-9 col-sm-10 col-xs-11">
-        <h3> Your Hero </h3>
+        <h3 style= "color: gold;"> Your Hero </h3>
 
           <!-- <span class= "health"> Health : </span> -->
-          <button class= "attack btn btn-lg btn-danger"> Attack </button>
-          <button class= "reset btn btn-sm"><span class= "glyphicon glyphicon-refresh"> Reset </span></button>
+          <button class= "attack btn btn-lg btn-danger" style= "color: black;"> Attack </button>
+          <button class= "reset btn btn-sm" style= "margin-left: 10px; color: black;"><span class= "glyphicon glyphicon-refresh">  </span></button>
       </div>
 
       <div class= "defenders row col-lg-8 col-md-9 col-sm-10 col-xs-11">
-        <h3> Defenders </h3>
+        <h3 style= "color: gold;"> Defenders </h3>
         <!-- <span class= "health"> Health : </span> -->
       </div>
 
@@ -57,7 +57,10 @@
   
   
   </audio>
+    
 
   </div>
+  
+  <footer class= "footer" style= "color: gold;"> Games by Nate </footer>
   <script type= "text/javascript" src="assets/game.js"> </script>
 </body>
